# VkBot_weather

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  consts.py  core.py  main.py
src/VkBot_weather/: consts.py  logic.py  test.py  yandex_api.py
