[tool.poetry]
name = "vkbot_weather"
version = "0.1.0"
description = "simple bot for view weather today"
authors = ["smapl <a.mustafin00@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
vk_api = "^11.8.0"
yandex-weather-api = "^0.2.4"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
